cilium_lab/policies/nodeport.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: toto-deployment
spec:
  selector:
    matchLabels:
      app: toto
  replicas: 4
  template:
    metadata:
      labels:
        app: toto
    spec:
      containers:
        - name: echosrv
          image: inanimate/echo-server
          ports:
          - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: toto-service
spec:
  type: NodePort
    ##externalTrafficPolicy: Local
  externalTrafficPolicy: Cluster
  selector:
    app: toto
  ports:
  # Default port used by the image
  - port: 8080
---
