cilium_lab/policies/allow-to-foo.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-to-foo"
spec:
  endpointSelector:
    matchLabels:
      app: foo
  ingress:
