cilium_lab/policies/deny-to-bar.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "deny-bar-ingress"
spec:
  endpointSelector:
    matchLabels:
      app: bar
  ingress:
  - {}
